# gnome-initial-setup

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CONTRIBUTING.md  COPYING  DEBUGGING.md  HACKING  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  gnome-initial-setup.doap  goblint.toml  meson.build  meson_options.txt
.gitlab-ci/: fedora.Dockerfile  (+3 more)
data/: 20-gnome-initial-setup.rules  20-gnome-initial-setup.rules.in  Makefile.am  gnome-initial-setup-copy-worker.desktop.in.in  gnome-initial-setup-copy-worker.service.in  gnome-initial-setup-first-login.desktop.in.in  gnome-initial-setup-first-login.service.in  gnome-initial-setup.conf  gnome-initial-setup.desktop.in.in  gnome-initial-setup.service  gnome-initial-setup.service.in  gnome-initial-setup.session  gnome-initial-setup.session.conf  gnome-initial-setup.session.conf.in  gnome-initial-setup.session.in  gnome-welcome-tour  gnome-welcome-tour.desktop.in.in  gnome-welcome-tour.service.in  initial-setup.json  meson.build  org.gnome.initial-setup.policy  setup-shell.desktop  welcome-tour.desktop
data/dconf/: gnome-initial-setup.in  meson.build
data/dconf/defaults/: 00-upstream-settings
gnome-initial-setup/: Makefile.am  README  cc-common-language.c  cc-common-language.h  cc-notebook.c  gdm-initial-setup.c  gdm-languages.c  gdm-languages.h  gis-account-page.c  gis-account-page.h  gis-account-page.ui  gis-assistant-clutter.c  gis-assistant-clutter.h  gis-assistant-gd.c  gis-assistant-gd.h  gis-assistant-gtk.c  gis-assistant-gtk.h  gis-assistant-private.h  gis-assistant.c  gis-assistant.gresource.xml  gis-assistant.h  gis-assistant.ui  gis-center-container.c  gis-center-container.h  gis-driver.c  gis-driver.h  gis-elevate.c  gis-elevate.h  gis-eula-pages.c  gis-eula-pages.h  gis-goa-page.c  gis-goa-page.h  gis-keyring.c  gis-keyring.h  gis-language-page.c  gis-location-page.c  gis-location-page.h  gis-network-page.c  gis-network-page.h  gis-page-header.c  (+29 more)
gnome-initial-setup/languages/: Makefile.am  cc-common-language.c  cc-common-language.h  list-languages.c
gnome-initial-setup/pages/: Makefile.am  meson.build
gnome-initial-setup/pages/account/: Makefile.am  account.gresource.xml  cc-crop-area.c  gis-account-avatar-chooser.ui  gis-account-camera-dialog.c  gis-account-camera-dialog.h  gis-account-camera-dialog.ui  gis-account-page-enterprise.c  gis-account-page-enterprise.h  gis-account-page-enterprise.ui  gis-account-page-local.c  gis-account-page-local.h  gis-account-page-local.ui  gis-account-page-offline.c  gis-account-page-offline.h  gis-account-page-offline.ui  gis-account-page-style.css  gis-account-page.c  gis-account-page.css  gis-account-page.h  gis-account-page.ui  gis-account-pages.c  gis-account-pages.h  meson.build  pw-utils-pwquality.c  pw-utils.c  pw-utils.h  um-photo-dialog.c  um-photo-dialog.h  um-realm-manager.c  um-realm-manager.h  um-utils.c  um-utils.h
gnome-initial-setup/pages/eulas/: Makefile.am  eulas.gresource.xml  gis-eula-page.c  gis-eula-page.h  gis-eula-page.ui  gis-eula-pages.c  gis-eula-pages.h  meson.build  utils.c  utils.h
gnome-initial-setup/pages/goa/: Makefile.am  cc-online-accounts-add-account-dialog.c  cc-online-accounts-add-account-dialog.h  gis-goa-page.c  gis-goa-page.h  gis-goa-page.ui  gnome-initial-setup-goa-helper.c  goa.gresource.xml  meson.build
gnome-initial-setup/pages/hostname/: Makefile.am  gis-hostname-page.c  gis-hostname-page.h  gis-hostname-page.ui  hostname-utils.c  hostname-utils.h  hostname.gresource.xml  meson.build
gnome-initial-setup/pages/install/: gis-install-page.c  gis-install-page.css  gis-install-page.h  gis-install-page.ui  install.gresource.xml  meson.build
gnome-initial-setup/pages/keyboard/: Makefile.am  cc-common-language.c  cc-ibus-utils.h  cc-input-chooser.c  cc-input-chooser.h  cc-util.c  gis-keyboard-page.c  gis-keyboard-page.h  gis-keyboard-page.ui  gnome-region-panel-input.c  gnome-region-panel-input.h  input-chooser.ui  keyboard.gresource.xml  meson.build
gnome-initial-setup/pages/language/: Makefile.am  cc-common-language.c  cc-language-chooser.c  cc-language-chooser.h  cc-util.h  gis-language-chooser.c  gis-language-chooser.h  gis-language-chooser.ui  gis-language-page.c  gis-language-page.h  gis-language-page.ui  gis-welcome-widget.c  gis-welcome-widget.h  gis-welcome-widget.ui  language-chooser.ui  language.gresource.xml  locarchive.h  meson.build
gnome-initial-setup/pages/location/: Makefile.am  cc-timezone-map.c  cc-timezone-map.h  gis-location-page.c  gis-location-page.h  gis-location-page.ui  location.gresource.xml  tz.c  tz.h
gnome-initial-setup/pages/network/: Makefile.am  gis-network-page.c  gis-network-page.h  gis-network-page.ui  meson.build  network-dialogs.c  network-dialogs.h  network.gresource.xml  panel-cell-renderer-security.c
gnome-initial-setup/pages/parental-controls/: gis-parental-controls-page.c  gis-parental-controls-page.h  gis-parental-controls-page.ui  meson.build  parental-controls.gresource.xml
gnome-initial-setup/pages/password/: .Makefile.am.swp  Makefile.am  account-resources.c  account-resources.h  gis-account-page-enterprise.c  gis-account-page-enterprise.ui  gis-account-page-local.c  gis-account-page-local.h  gis-account-page-local.ui  gis-password-page.c  gis-password-page.css  gis-password-page.h  gis-password-page.ui  meson.build  password-resources.c  password-resources.h  password.gresource.xml  pw-utils.c  pw-utils.h  um-realm-generated.c  um-realm-generated.h  um-realm-manager.c  um-realm-manager.h
gnome-initial-setup/pages/privacy/: Makefile.am  gis-privacy-page.c  gis-privacy-page.h  gis-privacy-page.ui  meson.build  privacy-resources.c  privacy-resources.h  privacy.gresource.xml
gnome-initial-setup/pages/region/: Makefile.am  cc-common-language.h  cc-region-chooser.c  cc-region-chooser.h  gis-region-page.c  gis-region-page.h  gis-region-page.ui  meson.build  region-chooser.ui  region.gresource.xml
gnome-initial-setup/pages/software/: Makefile.am  gis-software-page.c  gis-software-page.h  gis-software-page.ui  meson.build  software.gresource.xml
(+137 files in other folders)
