option('vendor-conf-file',
       type: 'string',
       description: 'points to a keyfile containing vendor customization'
)

option('cheese',
       description: 'enable support for Cheese',
       type: 'feature',
       value: 'auto'
)

option('ibus',
       description: 'enable support for IBus',
       type: 'feature',
       value: 'auto'
)

option('systemd',
  type: 'boolean',
  value: true,
  description: 'Enable systemd integration'
)

option('parental_controls',
  type: 'feature',
  value: 'auto',
  description: 'Enable parental controls pages',
)
